--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ body{ background:#000 url("background.png") center top / cover no-repeat fixed; 
 
   <!-- Google button -->
   <div id="g_id_onload"
-       data-client_id=""
+       data-client_id="690765229829-6m73boc7cn4lhkvjel8aa2vo96e83f0t.apps.googleusercontent.com"
        data-callback="handleCredentialResponse"
        data-auto_prompt="false">
   </div>
