--- a/index.html
+++ b/index.html
@@ -73,42 +73,62 @@ body{ background:#000 url("background.png") center top / cover no-repeat fixed; 
   :root{ --btn: clamp(110px, 16vw, 180px); --titleMaxH: 26vh; --maxw:900px; }
 }
 
-/* ---- LOGIN ---- */
-#loginBox{
-  width:min(92vw, 520px);
-  margin-top: calc(env(safe-area-inset-top) + 70px);
-  padding: 16px 14px;
+/* ===== LOGIN FULL CENTER ===== */
+
+body {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url("background.jpg") center/cover no-repeat fixed;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+#loginBox {
+  width: 90%;
+  max-width: 380px;
+  padding: 40px 30px;
   border-radius: 18px;
-  background: rgba(0,0,0,.55);
-  border: 1px solid rgba(255,255,255,.14);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  text-align:center;
+  backdrop-filter: blur(14px);
+  background: rgba(0, 0, 0, 0.65);
+  text-align: center;
+  box-shadow: 0 10px 40px rgba(0,0,0,0.6);
 }
-#loginTitle{
-  margin: 0 0 10px 0;
-  font-weight: 950;
-  letter-spacing: .6px;
-  text-transform: uppercase;
-  color: rgba(255,255,255,.92);
+
+#loginTitle {
+  margin: 0 0 30px 0;
+  font-size: 24px;
+  letter-spacing: 2px;
+  color: #ffffff;
 }
-#loginMsg{
-  margin: 8px 0 0 0;
-  font-weight: 800;
-  color: rgba(255,255,255,.78);
-  font-size: 14px;
-  min-height: 18px;
+
+.g_id_signin {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
 }
-#logoutBtn{
+
+#loginMsg {
   margin-top: 10px;
-  border:1px solid rgba(255,255,255,.18);
-  background: rgba(0,0,0,.18);
-  color: rgba(255,255,255,.92);
-  padding: 10px 12px;
-  border-radius: 14px;
-  font-weight: 900;
-  cursor:pointer;
+  font-size: 14px;
+  color: #ff6b6b;
 }
+
+#logoutBtn {
+  margin-top: 15px;
+  padding: 8px 20px;
+  border-radius: 8px;
+  border: none;
+  background: rgba(255,255,255,0.1);
+  color: white;
+  cursor: pointer;
+}
+
+#logoutBtn:hover {
+  background: rgba(255,255,255,0.2);
+}
+
 </style>
 
 <script src="https://accounts.google.com/gsi/client" async defer></script>
