--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url("background.jpg") center/cover no-repeat fixed;
+  background: url("background.png") center/cover no-repeat fixed;
   font-family: 'Segoe UI', sans-serif;
 }
 
