--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ const $logout = document.getElementById("logoutBtn");
 
 /* ====== UI ====== */
 function showMsg(t){ $msg.textContent = t || ""; }
-ffunction showPortal(push = true){
+function showPortal(push = true){
   $loginBox.style.display = "none";
   $portal.style.display = "flex";
 
