--- a/index.html
+++ b/index.html
@@ -21,25 +21,93 @@
   --btn: clamp(100px, min(22vw, 15vh), 170px);
   --gap: clamp(10px, min(3vw, 2vh), 18px);
 }
+
 *{ box-sizing:border-box; }
+
 html, body{
-  margin:0; padding:0; height:100%;
-  overflow:auto;
-  overscroll-behavior-y:auto;
+  margin:0;
+  padding:0;
+  height:100%;
   background:#000;
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
   -webkit-text-size-adjust:100%;
+  overflow:auto;
+  overscroll-behavior-y:auto;
 }
-body{ background:#000 url("background.png") center top / cover no-repeat fixed; }
+
+/* ✅ BACKGROUND UNIQUE (ne pas redéfinir body plus bas) */
+body{
+  background:#000 url("background.png") center top / cover no-repeat fixed;
+}
+
+/* ====== LOGIN SCREEN (plein écran centré) ====== */
+#loginScreen{
+  min-height: 100vh;
+  min-height: 100dvh;
+  width:100%;
+  display:none; /* affiché par JS */
+  align-items:center;
+  justify-content:center;
+  padding: calc(env(safe-area-inset-top) + 14px) 14px calc(env(safe-area-inset-bottom) + 14px);
+}
+
+#loginBox{
+  width: min(92vw, 420px);
+  padding: 22px 18px;
+  border-radius: 18px;
+  backdrop-filter: blur(14px);
+  -webkit-backdrop-filter: blur(14px);
+  background: rgba(0,0,0,.62);
+  border: 1px solid rgba(255,255,255,.14);
+  box-shadow: 0 10px 40px rgba(0,0,0,0.6);
+  text-align:center;
+}
+
+#loginTitle{
+  margin: 0 0 12px 0;
+  font-size: 20px;
+  letter-spacing: 1.2px;
+  text-transform: uppercase;
+  color: rgba(255,255,255,.92);
+  font-weight: 950;
+}
+
+.g_id_signin{
+  display:flex;
+  justify-content:center;
+  margin: 10px 0 8px 0;
+}
+
+#loginMsg{
+  margin: 8px 0 0 0;
+  font-size: 14px;
+  font-weight: 800;
+  color: rgba(255,255,255,.82);
+  min-height: 18px;
+}
+
+#logoutBtn{
+  margin-top: 12px;
+  padding: 9px 14px;
+  border-radius: 12px;
+  border: 1px solid rgba(255,255,255,.18);
+  background: rgba(0,0,0,.18);
+  color: rgba(255,255,255,.92);
+  font-weight: 900;
+  cursor: pointer;
+}
+
+/* ====== PORTAIL ====== */
 .wrap{
   min-height:100vh;
   min-height:100dvh;
   width:100%;
-  display:flex;
+  display:none; /* affiché par JS */
   flex-direction:column;
   align-items:center;
   padding-bottom: calc(env(safe-area-inset-bottom) + 12px);
 }
+
 .title{
   margin-top: calc(env(safe-area-inset-top) + 2px);
   width: min(94vw, 680px);
@@ -52,6 +120,7 @@ body{ background:#000 url("background.png") center top / cover no-repeat fixed; 
   transform: scale(1.25);
   transform-origin: center top;
 }
+
 .grid{
   width: min(94vw, var(--maxw));
   margin-top: clamp(8px, 1.5vh, 16px);
@@ -61,6 +130,7 @@ body{ background:#000 url("background.png") center top / cover no-repeat fixed; 
   justify-items:center;
   align-content:start;
 }
+
 .btn{
   width: var(--btn);
   height: var(--btn);
@@ -68,67 +138,21 @@ body{ background:#000 url("background.png") center top / cover no-repeat fixed; 
   text-decoration:none;
   -webkit-tap-highlight-color:transparent;
 }
-.btn img{ width:100%; height:100%; object-fit:contain; display:block; }
+
+.btn img{
+  width:100%;
+  height:100%;
+  object-fit:contain;
+  display:block;
+}
+
 @media (min-width:768px){
-  :root{ --btn: clamp(110px, 16vw, 180px); --titleMaxH: 26vh; --maxw:900px; }
+  :root{
+    --btn: clamp(110px, 16vw, 180px);
+    --titleMaxH: 26vh;
+    --maxw:900px;
+  }
 }
-
-/* ===== LOGIN FULL CENTER ===== */
-
-body {
-  margin: 0;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: url("background.png") center/cover no-repeat fixed;
-  font-family: 'Segoe UI', sans-serif;
-}
-
-#loginBox {
-  width: 90%;
-  max-width: 380px;
-  padding: 40px 30px;
-  border-radius: 18px;
-  backdrop-filter: blur(14px);
-  background: rgba(0, 0, 0, 0.65);
-  text-align: center;
-  box-shadow: 0 10px 40px rgba(0,0,0,0.6);
-}
-
-#loginTitle {
-  margin: 0 0 30px 0;
-  font-size: 24px;
-  letter-spacing: 2px;
-  color: #ffffff;
-}
-
-.g_id_signin {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 15px;
-}
-
-#loginMsg {
-  margin-top: 10px;
-  font-size: 14px;
-  color: #ff6b6b;
-}
-
-#logoutBtn {
-  margin-top: 15px;
-  padding: 8px 20px;
-  border-radius: 8px;
-  border: none;
-  background: rgba(255,255,255,0.1);
-  color: white;
-  cursor: pointer;
-}
-
-#logoutBtn:hover {
-  background: rgba(255,255,255,0.2);
-}
-
 </style>
 
 <script src="https://accounts.google.com/gsi/client" async defer></script>
@@ -137,31 +161,32 @@ body {
 <body>
 
 <!-- LOGIN -->
-<div id="loginBox">
-  <h2 id="loginTitle">Accès Portail</h2>
+<section id="loginScreen">
+  <div id="loginBox">
+    <h2 id="loginTitle">Accès Portail</h2>
 
-  <!-- Google button -->
-  <div id="g_id_onload"
-       data-client_id="690765229829-6m73boc7cn4lhkvjel8aa2vo96e83f0t.apps.googleusercontent.com"
-       data-callback="handleCredentialResponse"
-       data-auto_prompt="false">
+    <div id="g_id_onload"
+         data-client_id="PLACEHOLDER"
+         data-callback="handleCredentialResponse"
+         data-auto_prompt="false">
+    </div>
+
+    <div class="g_id_signin"
+         data-type="standard"
+         data-size="large"
+         data-theme="outline"
+         data-text="sign_in_with"
+         data-shape="rectangular">
+    </div>
+
+    <p id="loginMsg"></p>
+
+    <button id="logoutBtn" type="button">Déconnexion</button>
   </div>
-
-  <div class="g_id_signin"
-       data-type="standard"
-       data-size="large"
-       data-theme="outline"
-       data-text="sign_in_with"
-       data-shape="rectangular">
-  </div>
-
-  <p id="loginMsg"></p>
-
-  <button id="logoutBtn" type="button">Déconnexion</button>
-</div>
+</section>
 
 <!-- PORTAIL -->
-<main class="wrap" id="portal" style="display:none;">
+<main class="wrap" id="portal">
   <img class="title" src="titre.png" alt="Bienvenue sur CS Consenvoye">
 
   <section class="grid" aria-label="Menu">
@@ -181,53 +206,37 @@ body {
 </main>
 
 <script>
-/* ====== CONFIG (SEULS 2 TRUCS À METTRE) ====== */
+/* ====== CONFIG (2 SEULS TRUCS) ====== */
 const GOOGLE_CLIENT_ID = "690765229829-6m73boc7cn4lhkvjel8aa2vo96e83f0t.apps.googleusercontent.com";
-const API = "https://script.google.com/macros/s/AKfycbyOtpcY1OIyDxbbsyaMJHnkeSjzjD54MG1lM7nqAGQzuc_0kmCRNCAFe_2WZUc1xQrL/exec"; // https://script.google.com/macros/s/XXXX/exec
+const API = "https://script.google.com/macros/s/AKfycbyOtpcY1OIyDxbbsyaMJHnkeSjzjD54MG1lM7nqAGQzuc_0kmCRNCAFe_2WZUc1xQrL/exec";
 
-const LS_KEY = "cs_portail_email_v1";
+/* ====== STORAGE ====== */
+const LS_EMAIL = "cs_portail_email_v1";
+const SS_LAST_OK = "cs_portail_last_ok_v1";
 
 /* ====== DOM ====== */
-const $loginBox = document.getElementById("loginBox");
+const $loginScreen = document.getElementById("loginScreen");
 const $portal = document.getElementById("portal");
 const $msg = document.getElementById("loginMsg");
 const $logout = document.getElementById("logoutBtn");
 
 /* ====== UI ====== */
 function showMsg(t){ $msg.textContent = t || ""; }
-function showPortal(push = true){
-  $loginBox.style.display = "none";
+function showPortal(){
+  $loginScreen.style.display = "none";
   $portal.style.display = "flex";
-
-  // IMPORTANT : garder l'URL en mode portail pour que "Retour" ne réaffiche pas le login
-  if (push) {
-    if (!location.search.includes("portal=1")) {
-      history.pushState({page:"portal"}, "", "?portal=1");
-    } else {
-      history.replaceState({page:"portal"}, "", "?portal=1");
-    }
-  }
+  sessionStorage.setItem(SS_LAST_OK, "1");
 }
-
-function showLogin(push = true){
+function showLogin(){
   $portal.style.display = "none";
-  $loginBox.style.display = "block";
-
-  // IMPORTANT : enlever l'URL portail quand on est au login
-  if (push) {
-    if (location.search.includes("portal=1")) {
-      history.replaceState({page:"login"}, "", location.pathname);
-    } else {
-      history.replaceState({page:"login"}, "", location.pathname);
-    }
-  }
+  $loginScreen.style.display = "flex";
+  sessionStorage.removeItem(SS_LAST_OK);
 }
 
-
-/* ====== JWT email (ROBUSTE) ====== */
+/* ====== JWT email (robuste) ====== */
 function b64urlToUtf8(b64url){
   let s = String(b64url || "").replace(/-/g, "+").replace(/_/g, "/");
-  while (s.length % 4) s += "="; // padding
+  while (s.length % 4) s += "=";
   const bin = atob(s);
   let out = "";
   for (let i=0;i<bin.length;i++){
@@ -238,70 +247,42 @@ function b64urlToUtf8(b64url){
 function parseJwtEmail(credential){
   const parts = String(credential || "").split(".");
   if (parts.length < 2) return "";
-  const payloadJson = b64urlToUtf8(parts[1]);
-  const payload = JSON.parse(payloadJson);
+  const payload = JSON.parse(b64urlToUtf8(parts[1]));
   return String(payload.email || "").trim().toLowerCase();
 }
 
 /* ====== JSONP ====== */
-function jsonp(url, cbName, timeoutMs = 30000){
+function jsonp(url, cbName, timeoutMs = 20000){
   return new Promise((resolve, reject) => {
     const script = document.createElement("script");
-    script.async = true;
-    script.defer = true;
-    script.crossOrigin = "anonymous";
-
     const cleanup = () => {
       script.remove();
       try { delete window[cbName]; } catch(e){ window[cbName] = undefined; }
     };
+    const timer = setTimeout(() => { cleanup(); reject(new Error("Timeout JSONP")); }, timeoutMs);
 
-    const timer = setTimeout(() => {
-      cleanup();
-      reject(new Error("Timeout JSONP"));
-    }, timeoutMs);
+    window[cbName] = (data) => { clearTimeout(timer); cleanup(); resolve(data); };
 
-    window[cbName] = (data) => {
-      clearTimeout(timer);
-      cleanup();
-      resolve(data);
-    };
-
-    // cache-buster (mobile/proxy)
     const sep = url.includes("?") ? "&" : "?";
-    script.src = url + sep + "_t=" + Date.now();
-
-    script.onerror = () => {
-      clearTimeout(timer);
-      cleanup();
-      reject(new Error("Erreur JSONP (script bloqué)"));
-    };
-
+    script.src = url + sep + "_t=" + Date.now(); // cache-buster
+    script.onerror = () => { clearTimeout(timer); cleanup(); reject(new Error("Erreur JSONP")); };
     document.head.appendChild(script);
   });
 }
 
-
 async function authCheck(email){
   const cb = "cb_auth_" + Math.random().toString(36).slice(2);
   const url = `${API}?view=auth_check&email=${encodeURIComponent(email)}&nocache=1&callback=${cb}`;
-
-  // 2 tentatives (mobile capricieux)
-  try {
-    return await jsonp(url, cb, 30000);
-  } catch(e1){
-    return await jsonp(url, cb, 30000);
-  }
+  return await jsonp(url, cb, 20000);
 }
 
 /* ====== Google callback ====== */
 async function handleCredentialResponse(response){
   try{
     showMsg("Vérification de l’accès…");
-
     const email = parseJwtEmail(response.credential);
     if(!email){
-      localStorage.removeItem(LS_KEY);
+      localStorage.removeItem(LS_EMAIL);
       showLogin();
       showMsg("Erreur : email introuvable.");
       return;
@@ -310,68 +291,67 @@ async function handleCredentialResponse(response){
     const res = await authCheck(email);
 
     if(res && res.ok === true){
-      localStorage.setItem(LS_KEY, email);
+      localStorage.setItem(LS_EMAIL, email);
       showMsg("");
       showPortal();
     }else{
-      localStorage.removeItem(LS_KEY);
+      localStorage.removeItem(LS_EMAIL);
       showLogin();
       showMsg("Accès refusé.");
     }
-  }catch(err){
-    localStorage.removeItem(LS_KEY);
+  }catch(e){
+    localStorage.removeItem(LS_EMAIL);
     showLogin();
     showMsg("Erreur réseau / serveur.");
   }
 }
 
 /* ====== Boot ====== */
-(async function(){
-  // inject client_id (UN SEUL ENDROIT)
-  const g = document.getElementById("g_id_onload");
-  g.setAttribute("data-client_id", GOOGLE_CLIENT_ID);
+(function boot(){
+  // inject client_id (1 seul endroit)
+  document.getElementById("g_id_onload").setAttribute("data-client_id", GOOGLE_CLIENT_ID);
 
- if(location.search.includes("portal=1")){
-  showPortal(false);
-}else{
-  showLogin(false);
-}
+  // ✅ anti flash : si on était OK dans cette session, on montre direct portail,
+  // puis on revalide quand même (si email supprimé => ça retombe au login)
+  const lastOk = sessionStorage.getItem(SS_LAST_OK) === "1";
+  if(lastOk){
+    showPortal();
+    showMsg("");
+  }else{
+    showLogin();
+    showMsg("");
+  }
 
-  showMsg("");
-
-  // si email mémorisé => RECHECK obligatoire
-  const saved = (localStorage.getItem(LS_KEY) || "").trim().toLowerCase();
+  // recheck si email mémorisé
+  const saved = (localStorage.getItem(LS_EMAIL) || "").trim().toLowerCase();
   if(saved){
-    try{
-      showMsg("Vérification…");
-      const res = await authCheck(saved);
-      if(res && res.ok === true){
-        showMsg("");
-        showPortal();
-      }else{
-        localStorage.removeItem(LS_KEY);
-        showMsg("Accès refusé.");
-      }
-    }catch(e){
-      localStorage.removeItem(LS_KEY);
-      showMsg("Erreur réseau / serveur.");
-    }
+    showMsg("Vérification…");
+    authCheck(saved)
+      .then(res => {
+        if(res && res.ok === true){
+          showMsg("");
+          showPortal();
+        }else{
+          localStorage.removeItem(LS_EMAIL);
+          showLogin();
+          showMsg("Accès refusé.");
+        }
+      })
+      .catch(() => {
+        localStorage.removeItem(LS_EMAIL);
+        showLogin();
+        showMsg("Erreur réseau / serveur.");
+      });
   }
 })();
 
-/* Déconnexion */
+/* Déconnexion (force nouveau compte) */
 $logout.addEventListener("click", ()=>{
-  localStorage.removeItem(LS_KEY);
+  localStorage.removeItem(LS_EMAIL);
+  sessionStorage.removeItem(SS_LAST_OK);
   showLogin();
   showMsg("Déconnecté.");
 });
-  window.onpopstate = function(){
-  if(location.search.includes("portal=1")){
-    showPortal(false);
-  }else{
-    showLogin(false);
-  }
-};
 </script>
 
 </body>
