--- a/index.html
+++ b/index.html
@@ -255,20 +255,36 @@ function parseJwtEmail(credential){
 function jsonp(url, cbName, timeoutMs = 20000){
   return new Promise((resolve, reject) => {
     const script = document.createElement("script");
+
     const cleanup = () => {
       script.remove();
-      try { delete window[cbName]; } catch(e){ window[cbName] = undefined; }
+      try { delete window[cbName]; } catch(e){}
     };
-    const timer = setTimeout(() => { cleanup(); reject(new Error("Timeout JSONP")); }, timeoutMs);
 
-    window[cbName] = (data) => { clearTimeout(timer); cleanup(); resolve(data); };
+    const timer = setTimeout(() => {
+      cleanup();
+      reject(new Error("Timeout JSONP"));
+    }, timeoutMs);
+
+    window[cbName] = (data) => {
+      clearTimeout(timer);
+      cleanup();
+      resolve(data);
+    };
 
     const sep = url.includes("?") ? "&" : "?";
-    script.src = url + sep + "_t=" + Date.now(); // cache-buster
-    script.onerror = () => { clearTimeout(timer); cleanup(); reject(new Error("Erreur JSONP")); };
-    document.head.appendChild(script);
+    script.src = url + sep + "_t=" + Date.now();
+
+    script.onerror = () => {
+      clearTimeout(timer);
+      cleanup();
+      reject(new Error("Script bloqué"));
+    };
+
+    document.body.appendChild(script); // ⚠️ PAS head
   });
 }
+
 
 async function authCheck(email){
   const cb = "cb_auth_" + Math.random().toString(36).slice(2);
